<resources>
    <string name="app_name">ChGK Fantasy</string>
    <string name="search_label">Search…</string>
    <string name="pick_player_title">Pick player</string>
    <string name="pick_team_title">Pick team</string>
    <string name="search_hint">Search by name…</string>
    <string name="fetch_error_message">Error:\n%1$s</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="login_error">Error on server-side occurred</string>
    <string name="balance">Balance: </string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_fill_in">Fill in this field</string>
    <string name="invalid_password_length">Password length should be between 8 and 20</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="prompt_signup">Does not have account? Sign up</string>
    <string name="prompt_signin">Already have an account? Sign in</string>
    <string name="log_out">Log out</string>
    <string name="not_enough_balance">Not enough balance</string>
</resources>